fix visibility

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -268,6 +268,8 @@ button {
       text-indent: -9999px;
     }
   }
+
+  visibility: hidden;
 }
 
 .overlay {
